src/objects/C501_Service_Household__c.object
<CustomObject>
    <fields>
        <fullName>C501_Affordable_Care_Act_Subsidy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Affordable Care Act Subsidy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Alimony_Other_Spousal_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Alimony / Other Spousal Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Annual_Income__c</fullName>
        <inlineHelpText>Annual Income for the household - used to calculate Income Level</inlineHelpText>
        <label>Annual Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>C501_BillingCity__c</fullName>
        <label>BillingCity</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_BillingPostalCode__c</fullName>
        <label>BillingPostalCode</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_BillingState__c</fullName>
        <label>BillingState</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_BillingStreet__c</fullName>
        <label>BillingStreet</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Case_Worker__c</fullName>
        <label>Case Worker</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Child_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Child Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Childcare_Voucher__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Childcare Voucher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Created_By__c</fullName>
        <label>Created By</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Current_Address_Move_In_Year__c</fullName>
        <label>Current Address Move In Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C501_EITC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>EITC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Earned_Income__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Earned Income</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C501_Federal_Poverty_Level__c</fullName>
        <formula>C501_Annual_Income__c / (12140 + ((C501_Household_Size__c - 1) * 4320))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Federal Poverty Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>C501_HUD_VASH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>HUD-VASH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Household_Income_Sources__c</fullName>
        <description>Module4</description>
        <label>Household Income Sources</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Income from Employment Only</fullName>
                </value>
                <value>
                    <fullName>Income from Employment and Other Income Source</fullName>
                </value>
                <value>
                    <fullName>Income from Employment, Other Income Source, and Non-Cash Benefits</fullName>
                </value>
                <value>
                    <fullName>Income from Employment and Non-Cash Benefits</fullName>
                </value>
                <value>
                    <fullName>Other Income Source Only</fullName>
                </value>
                <value>
                    <fullName>Other Income Source and Non-Cash Benefits</fullName>
                </value>
                <value>
                    <fullName>No Income</fullName>
                </value>
                <value>
                    <fullName>Non-Cash Benefits Only</fullName>
                </value>
                <value>
                    <fullName>Unknown/Not Reported</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_Household_Size__c</fullName>
        <description>Module4</description>
        <inlineHelpText>Number of people in the household - including those who are not listed as Contacts. Used to calculate HH Income Level and in Module4 reporting.</inlineHelpText>
        <label>Household Size</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_Household_Type__c</fullName>
        <description>Module4</description>
        <label>Household Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single Person</fullName>
                </value>
                <value>
                    <fullName>Two Adults No Children</fullName>
                </value>
                <value>
                    <fullName>Single Parent Female</fullName>
                </value>
                <value>
                    <fullName>Single Parent Male</fullName>
                </value>
                <value>
                    <fullName>Two Parent Household</fullName>
                </value>
                <value>
                    <fullName>Non-related Adults with Children</fullName>
                </value>
                <value>
                    <fullName>Multigenerational Household</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown/Not Reported</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_Household__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Households</relationshipLabel>
        <relationshipName>Service_Households</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>C501_Housing_Choice_Voucher__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Housing Choice Voucher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Housing__c</fullName>
        <description>Module4</description>
        <label>Housing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Own</fullName>
                </value>
                <value>
                    <fullName>Rent</fullName>
                </value>
                <value>
                    <fullName>Other permanent housing</fullName>
                </value>
                <value>
                    <fullName>Homeless</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown/Not Reported</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_Income_Unknown_Not_Reported__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Income Unknown / Not Reported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Level</label>
        <referenceTo>npsp__Level__c</referenceTo>
        <relationshipLabel>Service Household (Level)</relationshipLabel>
        <relationshipName>Service_Household_Levels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>C501_Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bellingham</fullName>
                </value>
                <value>
                    <fullName>East Whatcom</fullName>
                </value>
                <value>
                    <fullName>Island</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_NonCash_Income_Unknown__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>NonCash Income Unknown / Not Reported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Other_Income__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Other Income</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Other_Non_Cash_Income__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Other Non-Cash Income</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Other_Phone__c</fullName>
        <label>Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>C501_Outcomes__c</fullName>
        <label>Outcomes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Furnace Repair Received</fullName>
                </value>
                <value>
                    <fullName>Furnace Replacement Received</fullName>
                </value>
                <value>
                    <fullName>Eviction Prevention Received</fullName>
                </value>
                <value>
                    <fullName>Disconnect Averted</fullName>
                </value>
                <value>
                    <fullName>Service Restored</fullName>
                </value>
                <value>
                    <fullName>Enrolled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Dropped</fullName>
                </value>
                <value>
                    <fullName>Waitlisted</fullName>
                </value>
                <value>
                    <fullName>Not Eligible</fullName>
                </value>
                <value>
                    <fullName>Permanent Housing On Own</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>P Over 30</fullName>
                </value>
                <value>
                    <fullName>P Over 60</fullName>
                </value>
                <value>
                    <fullName>No Contact</fullName>
                </value>
                <value>
                    <fullName>Rental Assistance</fullName>
                </value>
                <value>
                    <fullName>Left Area</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Jail/Prison</fullName>
                </value>
                <value>
                    <fullName>Change in Household Makeup</fullName>
                </value>
                <value>
                    <fullName>Transitional Housing Program</fullName>
                </value>
                <value>
                    <fullName>Housing Lab</fullName>
                </value>
                <value>
                    <fullName>NP Over 60</fullName>
                </value>
                <value>
                    <fullName>Case Management</fullName>
                </value>
                <value>
                    <fullName>Institution</fullName>
                </value>
                <value>
                    <fullName>NP Over 30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_Pension__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Pension</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Permanent_Supportive_Housing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Permanent Supportive Housing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>C501_Previous_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Level</label>
        <referenceTo>npsp__Level__c</referenceTo>
        <relationshipLabel>Service Households (Previous Level)</relationshipLabel>
        <relationshipName>Service_Household_PreviousLevels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>C501_Private_Disability_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Private Disability Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Program__c</fullName>
        <label>Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>C501_Intake_Programs</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_Public_Housing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Public Housing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Retirement_Income_Social_Security__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Retirement Income - Social Security</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_SNAP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>SNAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Self_Employed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Self Employed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Service_Household_Unique_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Household Unique Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_Service_Id__c</fullName>
        <externalId>true</externalId>
        <label>Service Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>C501_Service__c</fullName>
        <label>Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Adult Education</fullName>
                </value>
                <value>
                    <fullName>Basic Food Applications</fullName>
                </value>
                <value>
                    <fullName>Basic Needs</fullName>
                </value>
                <value>
                    <fullName>Bus Pass (Daily)</fullName>
                </value>
                <value>
                    <fullName>Childcare</fullName>
                    <isActive>false</isActive>
                    <label>Childcare</label>
                </value>
                <value>
                    <fullName>Coordinated Entry</fullName>
                </value>
                <value>
                    <fullName>Diapers</fullName>
                </value>
                <value>
                    <fullName>Domestic Violence Services</fullName>
                </value>
                <value>
                    <fullName>DSHS</fullName>
                </value>
                <value>
                    <fullName>Dump Pass</fullName>
                </value>
                <value>
                    <fullName>Early Head Start</fullName>
                </value>
                <value>
                    <fullName>Early Learning</fullName>
                </value>
                <value>
                    <fullName>ECEAP</fullName>
                </value>
                <value>
                    <fullName>Emergency Child Care Voucher</fullName>
                    <isActive>false</isActive>
                    <label>Emergency Child Care Voucher</label>
                </value>
                <value>
                    <fullName>Emergency Food Box</fullName>
                </value>
                <value>
                    <fullName>Employment</fullName>
                </value>
                <value>
                    <fullName>Energy Assistance</fullName>
                </value>
                <value>
                    <fullName>Eviction Prevention Screening</fullName>
                </value>
                <value>
                    <fullName>Ferry Pass</fullName>
                </value>
                <value>
                    <fullName>Financial Literacy</fullName>
                </value>
                <value>
                    <fullName>Food Resources</fullName>
                </value>
                <value>
                    <fullName>Head Start</fullName>
                </value>
                <value>
                    <fullName>Head Start/ECEAP</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Health Plan Finder</fullName>
                </value>
                <value>
                    <fullName>Home Improvement</fullName>
                </value>
                <value>
                    <fullName>Homeless Verification Form Given to Client</fullName>
                </value>
                <value>
                    <fullName>Housing Assessment</fullName>
                </value>
                <value>
                    <fullName>Housing Intake</fullName>
                </value>
                <value>
                    <fullName>Housing Pool</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_ShippingCity__c</fullName>
        <label>ShippingCity</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_ShippingPostalCode__c</fullName>
        <label>ShippingPostalCode</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_ShippingState__c</fullName>
        <label>ShippingState</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_ShippingStreet__c</fullName>
        <label>ShippingStreet</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Social_Security_Disability_Income__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Social Security Disability Income (SSDI)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C501_Sub_Service__c</fullName>
        <label>Sub Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Furnace Repair</fullName>
                </value>
                <value>
                    <fullName>Furnace Replace</fullName>
                </value>
                <value>
                    <fullName>Eviction Prevention</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_Supplemental_Security_Income__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Supplemental Security Income (SSI)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_TANF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>TANF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Trigger_Ignore_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger Ignore Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Unemployment_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Unemployment Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_VA_Non_Service_Disability_Pension__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>VA Non-Service Disability Pension</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_VA_Service_Connected_Disability__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>VA Service-Connected Disability Comp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_WIC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>WIC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Worker_s_Compensation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Worker’s Compensation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Years_at_Current_Address__c</fullName>
        <label>Years at Current Address</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Household_Unique_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Household Unique Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Service Household</label>
    <nameField>
        <label>Service Household Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Households</pluralLabel>
    <recordTypes>
        <fullName>C501_Service_Household</fullName>
        <active>true</active>
        <label>Service Household</label>
    </recordTypes>
    <recordTypes>
        <fullName>C501_Service_Household_Merged</fullName>
        <active>true</active>
        <label>Service Household Merged</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>